--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,4 @@ fastapi~=0.73
 hiredis~=2.0
 jinja2~=3.0
 pydantic~=1.9
-git+ssh://git@github.com/mindbe/csapp.git
-git+ssh://git@github.com/mindbe/csconfig.git
-git+ssh://git@github.com/mindbe/csrpc.git
+redis~=4.0
